--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,8 +1,8 @@
-_commit: 0.1.2
+_commit: 0.1.5
 _src_path: gh:mapp-metabolomics-unit/mapp-repo-copier-template
-author: MAPP Metabolomics Unit
 common_filename_pattern: '*20250402_PMA_tp24*.mzML'
 email: pierre-marie.allard@unifr.ch
+gap_filling: false
 git_repo_path: /home/allardpm/git_repos/mapp-metabolomics-unit
 github_username: commons-teaching
 gnps_job_id: ''
@@ -10,6 +10,7 @@ ionization_mode: positive
 mapp_batch: mapp_batch_00164
 mapp_batch_description: Untargeted metabolomics of 3 plants - pos mode
 mapp_project: mapp_project_00050
+noise_level: 500000.0
 repository_name: group-dbgi
 target_variable: source_taxon
 recorded_setup: true
